Added more scripts

--- a/Python3-Notebook.ipynb
+++ b/Python3-Notebook.ipynb
@@ -224,6 +224,119 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Maths'"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "students = {\"Joe\":\"Maths\",\"John\":\"Geograpy\",\"Mary\":\"Physics\"}\n",
+    "students[\"Joe\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Joe studies Maths\n",
+      "John studies Geograpy\n",
+      "Mary studies Physics\n",
+      "Nancy studies Maths\n",
+      "['Joe', 'Nancy']\n"
+     ]
+    }
+   ],
+   "source": [
+    "students = {\"Joe\":\"Maths\",\"John\":\"Geograpy\",\"Mary\":\"Physics\",\"Nancy\":\"Maths\"}\n",
+    "for key,value in students.items():\n",
+    "    print(\"%s studies %s\" %(key,value))\n",
+    "names = [key for key,value in students.items() if value == \"Maths\"]\n",
+    "print(names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dnoB semaJ\n"
+     ]
+    }
+   ],
+   "source": [
+    "bond = \"James Bond\"\n",
+    "chars = list(bond)\n",
+    "chars.reverse()\n",
+    "print(\"\".join(chars))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter an int:5\n",
+      "120\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input(\"Enter an int:\"))\n",
+    "counter = n ;\n",
+    "fac = 1;\n",
+    "while counter > 0:\n",
+    "    fac = fac * counter\n",
+    "    counter = counter-1\n",
+    "print(fac)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'JOHN'"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def name_in_caps(name):\n",
+    "    return name.upper()\n",
+    "\n",
+    "name_in_caps(\"john\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
